HelloUltraviolet/Fixtures/RejectedSource/Comptime/RuntimeCallsComptimeProcedure/Source/Main.uv
//! Rejected compile-time specimen for runtime use of a compile-time procedure.

comptime procedure buildValue() -> i32 {
    return 1
}

public procedure runtimeCallsComptimeProcedureReference() -> i32 {
    return buildValue()
}
